example fromEvent apply throttleTime to limit number of events per time. improvement

--- a/index.html
+++ b/index.html
@@ -22,14 +22,20 @@
             background: white;
             margin-bottom: 5px;
         }
+
+        button {
+            font-size: 2rem;
+            font-weight: 700;
+        }
     </style>
 </head>
 
 <body>
+    <button>---X____ CLICK ME ____X---</button>
     <ul id="output">
 
     </ul>
-    <button>Click me</button>
+
     <script src="/bundle.js"></script>
 </body>
 
