--- a/jquery/index.html
+++ b/jquery/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>Hello.</h1>
+    <img src="drum.png" alt="">
+    <a href="https://www.google.com">Google</a>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
