Add Event Listeners with jQuery

--- a/jquery/index.html
+++ b/jquery/index.html
@@ -10,13 +10,16 @@
 
 <body>
     <h1>Hello.</h1>
-    <img src="drum.png" alt="">
+    <h2>Hello 2.</h2>
+    <!-- <img src="drum.png" alt=""> -->
     <a href="https://www.google.com">Google</a>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
     <button>Click Me</button>
+
+    <input type="text" name="" value="">
 
     <script src="jquery-3.4.1.min.js" charset="utf-8"></script>
     <script src="index.js" charset="utf-8"></script>
